# turbohaul-manager-rocm

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.cuda  Dockerfile.cuda-multi  Dockerfile.rocm  Dockerfile.rocm-test  LICENSE  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  docker-compose.rocm.yml  docker-compose.yml  pyproject.toml  turbohaul-rocm-setup.sh  turbohaul-test-api.sh
docker/: turbohaul.default.yaml
docs/: AI_AGENT_SETUP.md  AMD_ROCM.md  ARCHITECTURE.md  KV_CACHE_OFFLOADING.md  MODEL_SETTINGS.md  MULTI_AGENT_SHARING.md  PREFIX_CACHE_REUSE.md  TOOL_CALL_HANDLING.md  TURBOQUANT_FLAGS.md  telemetry_reader_guide.md
smoke/: turbohaul.env
src/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/turbohaul/: __init__.py  __main__.py  blob_store.py  config.py  fsm.py  gpu_backend.py  live_monitor.py  manager.py  queue.py  (+8 more)
tests/: __init__.py  conftest.py  test_api_chat_completion.py  test_api_config_put.py  test_api_embeddings.py  test_api_import.py  test_api_logging.py  test_api_main.py  test_api_manifests.py  test_api_ollama.py  test_api_pull.py  test_api_ws_state.py  test_audit_pool.py  test_blob_store.py  test_config.py  test_disconnect_eviction.py  test_fsm.py  test_gpu_backend.py  test_main.py  test_manager.py  test_manifest.py  test_multislot_concurrency.py  test_ollama_tools.py  test_periodic_sweep.py  test_queue.py  test_safety.py  test_singleton.py  test_slot.py  test_ssrf_guard.py  test_state.py  test_subprocess_mgr.py  test_tool_call_recovery.py  test_worker_loop.py
(+33 files in other folders)
